--- a/style-xinviec.css
+++ b/style-xinviec.css
@@ -1,10 +1,12 @@
 #left{
     background:white;
-    float: left
+    float: left;
+    width: 70%;
 }
 #right{
-    background: grey;
-    float: right
+    background: whitesmoke;
+    float: right;
+    width: 30%;
 }
 header{
     background: green;
